--- a/Homepage.html
+++ b/Homepage.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>PIS Security Services</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="pis.css">
 </head>
 <body>
@@ -55,3 +56,4 @@
 
 </body>
 </html>
+
