--- a/services.html
+++ b/services.html
@@ -21,7 +21,7 @@
 
 
 
-    <ul class="nav-links">
+    <ul class=>
       <li><a href="Homepage.html">Home</a></li>
       <li><a href="about us.html">About us</a></li>
       <li><a href="services.html">Our Services</a></li>
@@ -222,5 +222,6 @@ document.querySelector('.menu-toggle').onclick = () => {
 
 </body>
 </html>
+
 
 
