--- a/Homepage.html
+++ b/Homepage.html
@@ -19,7 +19,8 @@
  
 
     <ul>
-      <li><a href="Homepage.html">Home</a></li>
+      
+      <li><a href="Homepage.html" class="active">Home</a></li>
       <li><a href="about us.html">About us</a></li>
       <li><a href="services.html"> Our Services</a></li>
       <li><a href="team.html">Our Team</a></li>
@@ -56,4 +57,5 @@
 
 </body>
 </html>
+
 
