--- a/about us.html
+++ b/about us.html
@@ -18,7 +18,7 @@
 
     <ul>
       <li><a href="Homepage.html">Home</a></li>
-      <li><a href="about us.html">About us</a></li>
+      <li><a href="about us.html" class="active">>About us</a></li>
       <li><a href="services.html">Our Services</a></li>
       <li><a href="team.html">Our Team</a></li>
       <li><a href="contact.html" class="btn">Contact</a></li>
@@ -142,3 +142,4 @@ setInterval(() => {
 
 </body>
 </html>
+
