--- a/about us.html
+++ b/about us.html
@@ -18,10 +18,10 @@
 
     <ul>
       <li><a href="Homepage.html">Home</a></li>
-      <li><a href="about us.html" class="active">>About us</a></li>
+      <li><a href="about us.html" class="active">About us</a></li>
       <li><a href="services.html">Our Services</a></li>
       <li><a href="team.html">Our Team</a></li>
-      <li><a href="contact.html" class="btn">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
@@ -92,8 +92,7 @@
       <h3>Downloads</h3>
       <ul>
         <li>
-          <a href="pdf/PIS-Company-Profile.pdf" download>
-            Company Profile (PDF)
+          <!-- HERE WE UPLOAD DOWNLOADS
           </a>
         </li>
       </ul>
@@ -104,7 +103,6 @@
       <ul>
         <li><a href="contact.html">Call or email us</a></li>
         <li><a href="services.html">Our Services</a></li>
-        <li><a href="careers.html">Careers</a></li>
         <li><a href="team.html">Our Team</a></li>
       </ul>
     </div>
@@ -142,4 +140,5 @@ setInterval(() => {
 
 </body>
 </html>
+
 
