--- a/about us.html
+++ b/about us.html
@@ -92,7 +92,7 @@
       <h3>Downloads</h3>
       <ul>
         <li>
-          <!-- HERE WE UPLOAD DOWNLOADS
+          <!-- HERE WE UPLOAD DOWNLOAD-->
           </a>
         </li>
       </ul>
@@ -140,5 +140,6 @@ setInterval(() => {
 
 </body>
 </html>
+
 
 
