--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       <li><a href="about us.html">About us</a></li>
       <li><a href="services.html"> Our Services</a></li>
       <li><a href="team.html">Our Team</a></li>
-      <li><a href="contact.html" class="btn">Contact</a></li>
+      <li><a href="contact.html" class="active">Contact</a></li>
     </ul>
   </nav>
 
@@ -110,3 +110,4 @@
 
 </body>
 </html>
+
