--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
 
     <!-- COMMAND LEVEL -->
     <div class="team-group">
-      <h3>National Command Structure</h3>
+      <h3>Strategic Command Unit</h3>
 
       <div class="team-grid">
 
@@ -143,5 +143,6 @@
 
 </body>
 </html>
+
 
 
