--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
       <div class="team-grid">
 
         <div class="team-card">
-          <img src="images/sinombe.jpg" alt="">
+          <img src="images/.jpg" alt="">
           <h4>Mr. Sinombe</h4>
           <span>Operations Commander</span>
         </div>
@@ -143,6 +143,7 @@
 
 </body>
 </html>
+
 
 
 
