--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
       <p><strong>PIS Security Services</strong></p>
       <p>Phone:+264 61 252 895</p>
       <p>Phone:+264 81 215 6253</p>
+      <p>Controlroom Phone:+264 81 491 7639</p>
       <p>Email:pis2017services@gmail.com</p>
       <p>Address:PO.BOX 63090</p>
        <p> Windhoek,Namibia</p>
@@ -48,56 +49,64 @@
     <div class="contact-grid">
 
       <div class="contact-box">
-        <h4>Walvis Bay</h4>
+        <h4>Walvis Bay/Swakopmund</h4>
         <p>Email:piswalvis@gmail.com</p>
+        <p>Phone:+264 81 578 1824</p>
       </div>
 
       <div class="contact-box">
         <h4>Okahandja</h4>
         <p>Email:pisokahandja1@gmail.com</p>
+        <p>Phone:+264 81 397 5756</p>
       </div>
 
       <div class="contact-box">
         <h4>Otjiwarongo</h4>
         <p>Email:pisotjiwarongo02@gmail.com</p>
+        <p>Phone:+264 81 650 4350</p>
       </div>
 
       <div class="contact-box">
         <h4>Rundu</h4>
         <p>Email:pisrundu12@gmail.com</p>
+        <p>Phone:+264 81 317 6735</p>
       </div>
 
       <div class="contact-box">
-        <h4>Zambezi</h4>
-        <p>Email:piszambezi1@gmail.com</p>
-      </div>
-
-      <div class="contact-box">
-        <h4>Northern Regions</h4>
+        <h4>Oshakati & Northern Regions</h4>
         <p>Email:pisoshakati@gmail.com</p>
+        <p>Phone:+264 81 747 6755 </p>
       </div>
 
       <div class="contact-box">
         <h4>Karibib</h4>
         <p>Email:piskaribib@gmail.com</p>
+        <p>Phone:+264 81 481 8884</p>
       </div>
 
       <div class="contact-box">
         <h4>Keetmanshoop</h4>
         <p>Email:piskeetmanshoop1@gmail.com</p>
+        <p>Phone:+264 81 439 7085</p>
       </div>
 
       <div class="contact-box">
         <h4>Mariental</h4>
         <p>Email:pismariental@gmail.com</p>
+        <p>Phone:+264 81 215 6253</p>
       </div>
        <div class="contact-box">
-        <h4>Grootfontein</h4>
-        <p>Email:pisgrootfontein@gmail.com</p>
+        <h4>Katima Mulilo</h4>
+          <p>Phone:+264 81 293 5931</p>
+      </div>
+      <div class="contact-box">
+        <h4>Eenhana</h4>
+        <p>Phone:+264 81 640 1785 </p>
       </div>
        <div class="contact-box">
         <h4>Gobabis</h4>
         <p>Email:pisgobabis@gmail.com</p>
+         <p>Phone:+264 81 484 8941</p>
       </div>
     </div>
 
@@ -110,4 +119,5 @@
 
 </body>
 </html>
+
 
