--- a/team.html
+++ b/team.html
@@ -82,14 +82,14 @@
     <div class="team-group">
       <h3>Operation And Training Division</h3>
 
-      <div class="team-two">
+      <div class="team-grind">
 
         <div class="team-card">
           <img src="images/victor.jpg" alt="">
           <h4>Mr. VICTOR NAKWAFILA</h4>
           <span>Operational Captain</span>
         </div>
-         <br>
+         
         <div class="team-card">
           <img src="images/kabende.jpeg" alt="">
           <h4>Mr. KABENDE FRANCIS</h4>
@@ -165,5 +165,6 @@
 
 </body>
 </html>
+
 
 
