--- a/team.html
+++ b/team.html
@@ -47,7 +47,7 @@
 
       <div class="team-single">
         
-        <h4>Mr. SEBLON.K. HANGULA</h4>
+        <h4>Mr. SEBLON KAMBWALE</h4>
         <span>Chief Executive Officer</span>
       </div>
     </div>
@@ -82,7 +82,7 @@
     <div class="team-group">
       <h3>Operation And Training Division</h3>
 
-      <div class="team-grind">
+      <div class="team-two">
 
         <div class="team-card">
           <img src="images/victor.jpg" alt="">
@@ -165,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
