--- a/team.html
+++ b/team.html
@@ -47,7 +47,7 @@
 
       <div class="team-single">
         
-        <h4>Mr. SEBLON KAMBWALE</h4>
+        <h4>Mr. SEBLON.K.HANGULA</h4>
         <span>Chief Executive Officer</span>
       </div>
     </div>
@@ -165,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
