--- a/team.html
+++ b/team.html
@@ -47,7 +47,7 @@
 
       <div class="team-single">
         
-        <h4>Mr. SEBLON.K.HANGULA</h4>
+        <h4>Mr. SEBLON.K. HANGULA</h4>
         <span>Chief Executive Officer</span>
       </div>
     </div>
@@ -151,6 +151,7 @@
         <span>VIP Protection</span>
         <span>Access Control</span>
         <span>Patrol Units</span>
+        <span> Event Security</span>
       </div>
 
     </div>
@@ -165,6 +166,7 @@
 
 </body>
 </html>
+
 
 
 
