--- a/team.html
+++ b/team.html
@@ -28,7 +28,7 @@
       <li><a href="about us.html">About us</a></li>
       <li><a href="services.html">Our Services</a></li>
       <li><a href="team.html" class="active">Our Team</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="contact.html">Contacts</a></li>
     </ul>
   </nav>
 
@@ -166,6 +166,7 @@
 
 </body>
 </html>
+
 
 
 
