--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
       <li><a href="about us.html">About us</a></li>
       <li><a href="services.html" class="active">Our Services</a></li>
       <li><a href="team.html">Our Team</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="contact.html">Contacts</a></li>
     </ul>
   </nav>
 
@@ -222,6 +222,7 @@ document.querySelector('.menu-toggle').onclick = () => {
 
 </body>
 </html>
+
 
 
 
