--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       <li><a href="about us.html">About us</a></li>
       <li><a href="services.html"> Our Services</a></li>
       <li><a href="team.html">Our Team</a></li>
-      <li><a href="contact.html" class="active">Contact</a></li>
+      <li><a href="contact.html" class="active">Contacts</a></li>
     </ul>
   </nav>
 
@@ -119,5 +119,6 @@
 
 </body>
 </html>
+
 
 
