--- a/about us.html
+++ b/about us.html
@@ -21,7 +21,7 @@
       <li><a href="about us.html" class="active">About us</a></li>
       <li><a href="services.html">Our Services</a></li>
       <li><a href="team.html">Our Team</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="contact.html">Contacts</a></li>
     </ul>
   </nav>
 
@@ -140,6 +140,7 @@ setInterval(() => {
 
 </body>
 </html>
+
 
 
 
