--- a/Homepage.html
+++ b/Homepage.html
@@ -24,7 +24,7 @@
       <li><a href="about us.html">About us</a></li>
       <li><a href="services.html"> Our Services</a></li>
       <li><a href="team.html">Our Team</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="contact.html">Contacts</a></li>
     </ul>
   </nav>
   <div class="hero-content fade-in">
@@ -57,6 +57,7 @@
 
 </body>
 </html>
+
 
 
 
