--- a/about us.html
+++ b/about us.html
@@ -92,7 +92,7 @@
       <h3>Downloads</h3>
       <ul>
         <li>
-          <!-- HERE WE UPLOAD DOWNLOAD--
+        <p>None avilable</p>
           </a>
         </li>
       </ul>
@@ -140,6 +140,7 @@ setInterval(() => {
 
 </body>
 </html>
+
 
 
 
