--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <ul>
       
-      <li><a href="Homepage.html" class="active">Home</a></li>
+      <li><a href="index.html.html" class="active">Home</a></li>
       <li><a href="about us.html">About us</a></li>
       <li><a href="services.html"> Our Services</a></li>
       <li><a href="team.html">Our Team</a></li>
@@ -57,6 +57,7 @@
 
 </body>
 </html>
+
 
 
 
