--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PIS Security Services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="pis.css">
+
+  <title>PIS Security Services </title>
+
+  <meta name="description"
+        content="PIS Security is a trusted security company in Namibia providing professional security guards, VIP protection, event security, CCTV surveillance, armed response and corporate security solutions nationwide.">
+
+  <meta name="keywords"
+        content="PIS Security Services, PIS Security Namibia,PIS security website, security company Namibia, security guards Namibia, VIP protection Namibia, event security Namibia, CCTV surveillance Namibia, armed response Namibia, corporate security services">
+
+  <meta name="author" content="PIS Security Services Namibia">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/pis-logo.png" href="pis-logo.png">
+
+  <!-- Social media preview (VERY IMPORTANT for WhatsApp sharing) -->
+  <meta property="og:title" content="PIS Security | Leading Security Company in Namibia">
+  <meta property="og:description" content="Professional security guards, VIP protection, CCTV monitoring and event security services across Namibia.">
+  <meta property="og:image" content="images/pis-logo.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://pissecurity.com">
+  <link rel="stylesheet"href="pis.css">
 </head>
 <body>
  
@@ -57,6 +76,7 @@
 
 </body>
 </html>
+
 
 
 
