--- a/index.html
+++ b/index.html
@@ -4,26 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>PIS Security Services </title>
+  <title>PIS Security Services</title>
 
   <meta name="description"
         content="PIS Security is a trusted security company in Namibia providing professional security guards, VIP protection, event security, CCTV surveillance, armed response and corporate security solutions nationwide.">
 
   <meta name="keywords"
-        content="PIS Security Services, PIS Security Namibia,PIS security website, security company Namibia, security guards Namibia, VIP protection Namibia, event security Namibia, CCTV surveillance Namibia, armed response Namibia, corporate security services">
+        content="PIS Security Services,PIS website, PIS Security Namibia, security company Namibia, security guards Namibia, VIP protection Namibia, event security Namibia, CCTV surveillance Namibia, armed response Namibia, corporate security services">
 
   <meta name="author" content="PIS Security Services Namibia">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/pis-logo.png" href="pis-logo.png">
+  <!-- ✅ Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="images/pis-logo.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="images/pis-logo.png">
+  <link rel="apple-touch-icon" href="images/pis-logo.png">
+  <meta name="theme-color" content="#000000">
 
-  <!-- Social media preview (VERY IMPORTANT for WhatsApp sharing) -->
+  <!-- Social media preview -->
   <meta property="og:title" content="PIS Security | Leading Security Company in Namibia">
   <meta property="og:description" content="Professional security guards, VIP protection, CCTV monitoring and event security services across Namibia.">
   <meta property="og:image" content="images/pis-logo.png">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://pissecurity.com">
-  <link rel="stylesheet"href="pis.css">
+
+  <link rel="stylesheet" href="pis.css">
 </head>
 <body>
  
@@ -76,6 +80,7 @@
 
 </body>
 </html>
+
 
 
 
