--- a/contact.html
+++ b/contact.html
@@ -111,6 +111,26 @@
     </div>
 
   </section>
+  <section class="map-section">
+  <h2>Our Location</h2>
+
+  <div class="map-container">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d58981.91876707106!2d17.030243174357427!3d-22.490299914645288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x1c0b1ba2599bed1b%3A0x2bf17378f27f7fa3!2sPIS%20SECURITY%20SERVICES%2C%20Hans-Dietrich%20Genscher%20Street%2C%20Windhoek!3m2!1d-22.5264393!2d17.0675557!5e0!3m2!1sen!2sna!4v1772030224037!5m2!1sen!2sna"
+      width="100%"
+      height="450"
+      style="border:0;"
+      allowfullscreen=""
+      loading="lazy">
+    </iframe>
+  </div>
+
+  <a href="https://www.google.com/maps/dir/?api=1&destination=PIS+Security+Services+Windhoek"
+     target="_blank"
+     class="map-btn">
+     Get Directions
+  </a>
+</section>
 </header>
 
 <footer>
@@ -119,6 +139,7 @@
 
 </body>
 </html>
+
 
 
 
