--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,11 @@
      class="map-btn">
      Get Directions
   </a>
+    <p class="map-address">
+  Hans-Dietrich Genscher Street, Windhoek, Namibia
+</p>
 </section>
+  
 </header>
 
 <footer>
@@ -139,6 +143,7 @@
 
 </body>
 </html>
+
 
 
 
