--- a/Homepage.html
+++ b/Homepage.html
@@ -22,7 +22,7 @@
       <li><a href="about us.html">About us</a></li>
       <li><a href="services.html"> Our Services</a></li>
       <li><a href="team.html">Our Team</a></li>
-      <li><a href="contact.html" class="btn">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
   <div class="hero-content fade-in">
@@ -55,3 +55,4 @@
 
 </body>
 </html>
+
