--- a/Homepage.html
+++ b/Homepage.html
@@ -11,6 +11,7 @@
 <header class="hero PIS-home">
   <nav class="navbar">
     <h1 class="logo">
+  <link rel="icon" type="image/png" sizes="32x32" href="logoo.png">
   <img src="images/pis-logo.png" class="logo-img">
   PIS SECURITY <span>SERVICES</span>
 </h1>
@@ -56,5 +57,6 @@
 
 </body>
 </html>
+
 
 
