--- a/about us.html
+++ b/about us.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>About Us | PIS Security</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="icon" type="image/png" sizes="32x32" href="logoo.png">
   <link rel="stylesheet" href="pis.css">
 </head>
 
@@ -140,6 +141,7 @@ setInterval(() => {
 
 </body>
 </html>
+
 
 
 
