--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Contact Us | PIS Security</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="logoo.png">
   <link rel="stylesheet" href="pis.css">
 </head>
 
@@ -143,6 +144,7 @@
 
 </body>
 </html>
+
 
 
 
