--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <meta name="author" content="PIS Security Services Namibia">
 
   <!-- ✅ Favicon -->
-  <link rel="icon" type="image/png" sizes="32x32" href="images/pis-logo.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="images/pis-logo.png">
-  <link rel="apple-touch-icon" href="images/pis-logo.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/logoo.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="images/logoo.png">
+  <link rel="apple-touch-icon" href="images/logoo.png">
   <meta name="theme-color" content="#000000">
 
   <!-- Social media preview -->
@@ -80,6 +80,7 @@
 
 </body>
 </html>
+
 
 
 
