--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Social media preview -->
   <meta property="og:title" content="PIS Security | Leading Security Company in Namibia">
   <meta property="og:description" content="Professional security guards, VIP protection, CCTV monitoring and event security services across Namibia.">
-  <meta property="og:image" content="images/pis-logo.png">
+  <meta property="og:image" content="images/logoo.png">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://pissecurity.com">
 
@@ -80,6 +80,7 @@
 
 </body>
 </html>
+
 
 
 
