--- a/Homepage.html
+++ b/Homepage.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>PIS Security Services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="images/logoo.png" type="image/png">
   <link rel="stylesheet" href="pis.css">
 </head>
 <body>
@@ -57,6 +58,7 @@
 
 </body>
 </html>
+
 
 
 
