--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Our Services | PIS Security</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="logoo.png">
+    <link rel="icon" href="images/logoo.png" type="image/png">
   <link rel="stylesheet" href="pis.css">
 
   <!-- ICONS -->
@@ -223,6 +223,7 @@ document.querySelector('.menu-toggle').onclick = () => {
 
 </body>
 </html>
+
 
 
 
