--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Our Team | PIS Security</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="logoo.png">
+  <link rel="icon" href="images/logoo.png" type="image/png">
 
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="pis.css">
@@ -167,6 +167,7 @@
 
 </body>
 </html>
+
 
 
 
